--- a/abuse/abuse/csv to array.ipynb
+++ b/abuse/abuse/csv to array.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "[3325 rows x 1 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: Method .as_matrix will be removed in a future version. Use .values instead.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tab_keys = keys.as_matrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1Pq7t8mGwR9X7P2q1gLzpsJ9odu2wkBmgk'], dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab_keys[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1 = \"test\"\n",
+    "s2 = \"word\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1 = s1 + s2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testword\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "link = \"https://www.bitcoinabuse.com/reports/\"\n",
+    "def extend_text(value):\n",
+    "    value2 = link + value\n",
+    "    return value2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -395,92 +481,6 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['1Pq7t8mGwR9X7P2q1gLzpsJ9odu2wkBmgk'], dtype=object)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tab_keys[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s1 = \"test\"\n",
-    "s2 = \"word\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s1 = s1 + s2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "testword\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(s1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "link = \"https://www.bitcoinabuse.com/reports/\"\n",
-    "def extend_text(value):\n",
-    "    value2 = link + value\n",
-    "    return value2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: Method .as_matrix will be removed in a future version. Use .values instead.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
-   "source": [
-    "tab_keys = keys.as_matrix()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(tab_keys)):\n",
@@ -489,34 +489,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['https://www.bitcoinabuse.com/reports/1Pq7t8mGwR9X7P2q1gLzpsJ9odu2wkBmgk']\n"
+      "https://www.bitcoinabuse.com/reports/1Pq7t8mGwR9X7P2q1gLzpsJ9odu2wkBmgk\n"
      ]
     }
    ],
    "source": [
-    "print(tab_keys[0])"
+    "print(tab_keys[0][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "list = []"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(len(tab_keys)):\n",
+    "    list.append(tab_keys[i][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.bitcoinabuse.com/reports/15pY2U8WBZBJRVxGhh8WRXsdkXQbMKD8k9\n",
+      "https://www.bitcoinabuse.com/reports/15qfZoJNVyhZPUpBzwB5nMctkF39WPGaNL\n",
+      "https://www.bitcoinabuse.com/reports/1KRaa1YfDgZfCqHPJBkYmTNZ478zXNxuG\n",
+      "https://www.bitcoinabuse.com/reports/1EvPDEGNwWwmPh7Vjf8ronLrhxfKE9y3qo\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,5):\n",
+    "    print(list[i])"
+   ]
   },
   {
    "cell_type": "code",
@@ -542,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
